# Generative_AI_for_Synthetic_Data_to_Mitigate_Bias

./: .gitignore  README.md  dockerignore  project_report.py  pyproject.toml  repo.md
fair-synthetic-generator/: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MakeFile  README.md  debug_import.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  verify_system.py
fair-synthetic-generator/.github/: CODEOWNERS  dependabot.yml  feature_request,md
fair-synthetic-generator/.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  config.yml
fair-synthetic-generator/.github/workflows/: cd.yml  ci.yml  docs.yml
fair-synthetic-generator/MODELS/: worklog.md
fair-synthetic-generator/MODELS/pretrained/diffusion/: tabular_diffusion_adult.json  tabular_diffusion_adult.npz  tabular_diffusion_credit.json
fair-synthetic-generator/MODELS/pretrained/gan/: tabular_gan_adult.json  tabular_gan_adult.npz  tabular_gan_compas.json  tabular_gan_compas.npz
fair-synthetic-generator/MODELS/pretrained/vae/: tabular_vae_adult.json  tabular_vae_adult.npz  tabular_vae_adult_weights.json  tabular_vae_credit.json  tabular_vae_credit.npz
fair-synthetic-generator/MODELS/training/: generate_weights.py  train_pretrained.py
fair-synthetic-generator/configs/: __init__.py  config_loader.py  config_validator.py
fair-synthetic-generator/configs/default/: data_config.yaml  evaluation_config.yaml  generation_config.yaml
fair-synthetic-generator/configs/experiments/: ablation_study.yaml  baseline.yaml  high_fairness.yaml  high_fidelity.yaml  multimodal_full.yaml  quick_test.yaml  scaling_study.yaml  sensitivity_analysis.yaml  tabular_only.yaml
fair-synthetic-generator/data/dataloaders/: __init__.py  base_dataloader.py  image_dataloader.py  multimodal_dataloader.py  tabular_dataloader.py  text_dataloader.py
fair-synthetic-generator/data/schemas/: README.md  adult_schema.json  image_schema.json  tabular_schema.json  text_schema.json
fair-synthetic-generator/docs/: HOW_TO_USE.md  architecture.md  getting_started.md  index.md  pretrained_models.md
fair-synthetic-generator/notebooks/experiments/: exp_001_baseline.ipynb  exp_002_group_fairness.ipynb  exp_003_counterfactual.ipynb
fair-synthetic-generator/notebooks/exploratory/: 01_data_exploration.ipynb  02_fairness_analysis_notebook.ipynb  03_model_architecture_notebook.ipynb
fair-synthetic-generator/notebooks/tutorials/: custom_fairness_constraints.ipynb  multimodal_synthesis.ipynb  quickstart.ipynb
fair-synthetic-generator/scripts/data/: generate_synthetic_schema.py  preprocess_raw_data.py
fair-synthetic-generator/scripts/evaluation/: evaluate_fairness.py  evaluate_fidelity.py  generate_report.py
fair-synthetic-generator/scripts/setup/: download_pretrained.sh  generate_toy_data.py  install_dependencies.sh  test_api_preview.py
fair-synthetic-generator/scripts/synthesis/: batch_generation.py  generate_synthetic_data.py
fair-synthetic-generator/scripts/training/: hyperparameter_search.py  resume_training.py  train.py
fair-synthetic-generator/src/api/: __init__.py  app.py
fair-synthetic-generator/src/api/middleware/: __init__.py  logging_middleware.py
fair-synthetic-generator/src/api/routes/: __init__.py  evaluation.py  generation.py  health.py
fair-synthetic-generator/src/api/schemas/: __init__.py  request.py  response.py
fair-synthetic-generator/src/core/: __init__.py  base_module.py  constants.py  utils.py
fair-synthetic-generator/src/data/: __init__.py
fair-synthetic-generator/src/data/augmentation/: __init__.py  image_augmenter.py  tabular_augmenter.py  text_augmenter.py
fair-synthetic-generator/src/data/preprocessing/: image_preprocessor.py  multimodal_preprocessor.py  tabular_preprocessor.py  text_preprocessor.py
fair-synthetic-generator/src/data/schemas/: __init__.py  data_schema.py  sensitive_attribute.py
fair-synthetic-generator/src/evaluation/: __init__.py
fair-synthetic-generator/src/evaluation/dashboard/: __init__.py  report_generator.py  visualization.py
fair-synthetic-generator/src/evaluation/fairness/: __init__.py  counterfactual_metrics.py  group_metrics.py  individual_metrics.py  intersectional_metrics.py
fair-synthetic-generator/src/evaluation/fidelity/: __init__.py  distribution_metrics.py  downstream_utility.py  statistical_similarity.py
fair-synthetic-generator/src/evaluation/multimodal/: __init__.py  alignment_metrics.py  cross_modal_consistency.py  multimodal_metrics.py
fair-synthetic-generator/src/evaluation/privacy/: __init__.py  attribute_inference.py  differential_privacy.py  membership_inference.py  privacy_metrics.py
fair-synthetic-generator/src/fairness/: __init__.py  fairness_regularizer.py
fair-synthetic-generator/src/fairness/constraints/: __init__.py  base_constraint.py  counterfactual_fairness.py  demographic_parity.py  disparate_impact.py  equalized_odds.py  group_fairness.py  individual_fairness.py
fair-synthetic-generator/src/fairness/individual_fairness/: __init__.py  consistency_constraint.py  lipschitz_constraint.py
fair-synthetic-generator/src/fairness/losses/: __init__.py  adversarial_loss.py  fairness_loss.py  multi_objective_loss.py
fair-synthetic-generator/src/fairness/modules/: __init__.py  adversary_network.py  gradient_reversal.py
fair-synthetic-generator/src/fairness/utils/: __init__.py  fairness_bounds.py  sensitive_attribute_handler.py
fair-synthetic-generator/src/models/: __init__.py
fair-synthetic-generator/src/models/architectures/: __init__.py  counterfactual_generator.py  debiased_vae.py  (+2 more)
fair-synthetic-generator/src/synthesis/: __init__.py  generator_pipeline.py
fair-synthetic-generator/src/training/: __init__.py  trainer.py
fair-synthetic-generator/tests/: __init__.py  conftest.py  test_pretrained.py
fair-synthetic-generator/tests/e2e/: __init__.py  test_full_workflow.py
fair-synthetic-generator/tests/integration/: test_evaluation_pipeline.py  test_generation_pipeline.py  test_training_pipeline.py
fair-synthetic-generator/tests/unit/: __init__.py
(+57 files in other folders)
