[project]
name = "fair-synthetic-generator"
version = "0.1.0"
description = "Multimodal Fair Synthetic Data Generation with Generative AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fair Synth Team", email = "team@fair-synth.dev"}
]
keywords = [
    "machine-learning",
    "synthetic-data",
    "fairness",
    "generative-ai",
    "multimodal",
    "bias-mitigation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Machine Learning",
]

dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "tensorflow>=2.14.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "transformers>=4.35.0",
    "datasets>=2.15.0",
    
    # Fairness & metrics
    "fairlearn>=0.10.0",
    "aif360>=0.5.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    
    # API & serving
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    
    # Utilities
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    
    # Logging & experiment tracking
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    
    # Diffusion models
    "diffusers>=0.25.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
]

distributed = [
    "deepspeed>=0.12.0",
    "accelerate>=0.25.0",
    "fairscale>=0.4.0",
]

privacy = [
    "opacus>=1.4.0",
    "autoviz>=0.1.80",
]

[project.scripts]
fair-synth-train = "scripts.training.train:main"
fair-synth-generate = "scripts.synthesis.generate_synthetic_data:main"
fair-synth-evaluate = "scripts.evaluation.generate_report:main"
fair-synth-api = "src.api.app:run_server"

[project.urls]
Homepage = "https://github.com/fair-synth/fair-synthetic-generator"
Documentation = "https://fair-synth.github.io/fair-synthetic-generator"
Repository = "https://github.com/fair-synth/fair-synthetic-generator"
Issues = "https://github.com/fair-synth/fair-synthetic-generator/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
    | checkpoints
    | logs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "data/",
    "checkpoints/",
    "logs/",
    "tests/",
]

[[tool.mypy.overrides]]
module = "torch.*,tensorflow.*,transformers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"
]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
